--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "mongodb": "^4.1.2",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
