--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^9.0.0-rc.3",
     "styled-components": "^5.3.1"
   },
   "scripts": {
